environments/test-manifests/nginx/nging-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-example
#  annotations:
#    external-dns.alpha.kubernetes.io/hostname: nginx333.domain.com,nginx444.domain.com
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
#  clusterIP: None
