environments/test-manifests/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx-example
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: "nginx-test.domain.com"
    external-dns.alpha.kubernetes.io/ttl: "10"
spec:
  ingressClassName: nginx
  rules:
  - host: nginx-test.domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
  tls:
  - hosts:
    - nginx-test.domain.com
    secretName: nginx-tls
